# SimpleServer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: execute_tests.yml
src/: client.cpp  client.h  main.cpp  server.cpp  server.h  validator.cpp  validator.h
tests/: CMakeLists.txt  test_server.cpp  test_validator.cpp
